--- a/mainapp/expenseTracker/templates/expenseTracker/homepage.html
+++ b/mainapp/expenseTracker/templates/expenseTracker/homepage.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <header>
-        <h1>Welcome to the Home Page</h1>
-    </header>
-    <main>
-        <p>This is the home page of your Django application.</p>
-    </main>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Home Page {% endblock %}
+{% block content %}
+{% endblock %}
