--- a/mainapp/expenseTracker/templates/expenseTracker/add.html
+++ b/mainapp/expenseTracker/templates/expenseTracker/add.html
@@ -213,6 +213,16 @@
             <i class="fas fa-arrow-left" style="margin-right: 10px;"></i>
             Back to Expense List
         </a>
+
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
     </div>
 
     <script>
